# generic-file-adapter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  dev_setup.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
adapter/: example.env  generic_file_adapter.py
